[tool.poetry]
name = "crunchy-api"
version = "0.3.0"
description = "Python wrapper for the Crunchyroll API"
authors = ["David Buckley <buckley.w.david@gmail.com>"]
license = "MIT"

readme = 'README.md'
repository = "https://github.com/buckley-w-david/crunchy-api"
homepage = "https://github.com/buckley-w-david/crunchy-api"

[tool.poetry.dependencies]
python = "^3.6"
click = {version = "^6.7", optional = true}

[tool.poetry.extras]
cli = ["click"]

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
crunchy = 'crunchy_api.cli:main'
